# qmidiarp

./: AUTOCHORD.md  CMakeLists.txt  Doxyfile  Makefile.am  NEWS  README  configure.ac  qmidiarp.pro
qmidiarp_arp.lv2/: manifest.ttl  qmidiarp_arp.ttl
qmidiarp_lfo.lv2/: qmidiarp_lfo.ttl
qmidiarp_seq.lv2/: qmidiarp_seq.ttl
src/: CMakeLists.txt  Makefile.am  arpscreen.cpp  arpscreen.h  arpwidget.cpp  arpwidget.h  arpwidget_lv2.cpp  arpwidget_lv2.h  arpwidget_lv2_rtk.c  arpwidget_lv2_rtk.h  cursor.cpp  cursor.h  engine.cpp  engine.h  globstore.cpp  globstore.h  groovewidget.cpp  groovewidget.h  indicator.cpp  indicator.h  jackdriver.cpp  jackdriver.h  lfoscreen.cpp  lfoscreen.h  lfowidget.cpp  lfowidget.h  lfowidget_lv2.cpp  lfowidget_lv2.h  lfowidget_lv2_rtk.c  lfowidget_lv2_rtk.h  logwidget.cpp  logwidget.h  lv2_common.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  midiarp.cpp  midiarp.h  midiarp_lv2.cpp  (+41 more)
src/autochord/: CMakeLists.txt  arp_modes.c  arp_modes.cpp  arp_modes.h  autochord.cpp  autochord.h  chord.c  chord.cpp  chord.h  scale.c  scale.cpp  scale.h  seq_chord.c  seq_chord.h  seq_scale.c  seq_scale.h
src/translations/: qmidiarp_cs.ts  qmidiarp_de.ts  qmidiarp_es.ts  qmidiarp_fr.ts
